@startuml score_assistant_domain_model
skinparam style strictuml
title Domain Model - Score Assistant (v1.3 — Updated)

package "Core Domain" {

    class Semester <<Entity>> {
        +String id
        +String semester_name
        +Date start_date
        +Date end_date
    }

    class Class <<Entity>> {
        +String id
        +String class_name
        +String class_group
        +Decimal passing_threshold
    }

    class Student <<Entity>> {
        +String id
        +String student_id
        +Integer student_number
        +String student_name
        +String email
    }

    class GradeItem <<Entity>> {
        +String id
        +String item_name
        +GradeItemType item_type <<Enum>>
        +Date item_date
        +String item_description
        +Decimal max_score
        +Decimal weight
    }

    class GradeRecord <<Entity>> {
        +String id
        +Decimal score
        +DateTime last_modified_at
        -DateTime created_at
    }

    class Attachment <<Entity>> {
        +String id
        +String file_name
        +String mime_type
        +Integer file_size
        +Binary file_data
        +DateTime uploaded_at
    }
}

package "Persistence Contracts" {

    interface SemesterRepository <<Interface>> {
        +Create(Semester data): Semester
        +GetById(String id): Semester?
        +Update(String id, Semester delta): Semester
        +Delete(String id): Boolean
    }

    interface ClassRepository <<Interface>> {
        +Create(Class data): Class
        +GetById(String id): Class?
        +Update(String id, Class delta): Class
        +Delete(String id): Boolean
    }

    interface StudentRepository <<Interface>> {
        +Create(Student data): Student
        +GetById(String id): Student?
        +Update(String id, Student delta): Student
        +Delete(String id): Boolean
    }

    interface GradeItemRepository <<Interface>> {
        +Create(GradeItem data): GradeItem
        +GetById(String id): GradeItem?
        +Update(String id, GradeItem delta): GradeItem
        +Delete(String id): Boolean
    }

    interface GradeRecordRepository <<Interface>> {
        +Create(GradeRecord data): GradeRecord
        +GetById(String id): GradeRecord?
        +Update(String id, GradeRecord delta): GradeRecord
        +Delete(String id): Boolean
    }

    interface AttachmentRepository <<Interface>> {
        +Create(Attachment data): Attachment
        +GetById(String id): Attachment?
        +Update(String id, Attachment delta): Attachment
        +Delete(String id): Boolean
    }
}

' Relationships: Strong ownership with multiplicity
Semester "1" *-- "*" Class : "organizes and manages"
Class "1" *-- "*" Student : "contains"
Class "1" *-- "*" GradeItem : "defines"
GradeItem "1" *-- "*" GradeRecord : "evaluates"
Student "1" *-- "*" GradeRecord : "receives"
GradeRecord "1" *-- "*" Attachment : "stores"

enum GradeItemType {
    ATTENDANCE
    CLASSROOM_PERFORMANCE
    ASSIGNMENT
    REPORT
    OTHER
}

enum AttendanceStatus {
    PRESENT
    EXCUSED
    ABSENT
}

note right of Semester
  semester_name MUST be unique system-wide.
  start_date / end_date format: YYYY-MM-DD (Date, not DateTime).
end note

note right of Class
  class_name MUST be unique within a Semester.
  class_group is OPTIONAL (nullable).
  passing_threshold defaults to 60; teacher-adjustable.
end note

note right of Student
  student_id MUST be unique system-wide (Global Unique).
  student_number MUST be unique within a Class.
  Used for display ordering (ascending).
  email MUST be unique system-wide (Global Unique) and follow standard email format.
end note

note bottom of GradeItem
  item_date and item_description are OPTIONAL.
  max_score defaults to 100; MUST be > 0 except for CLASSROOM_PERFORMANCE.
  weight defaults to 0. System warns when Σweight ≠ 100%.
  Only CLASSROOM_PERFORMANCE allows negative max_score / negative GradeRecord.score.
end note

note bottom of GradeRecord
  score can be null (未登記 / N/A); treated as 0 in weighted calculation.
  UNIQUE constraint enforced on (student_id, grade_item_id).
  created_at is internal audit field (private).
end note

note bottom of Attachment
  Allowed types: PDF, .docx, .xlsx, .jpg, .png, .zip.
  file_size MUST be ≤ 10 MB (10,485,760 bytes).
  Max 5 attachments per (student, GradeItem) combination.
  file_data is stored directly in the DB as binary content (BLOB/BYTEA).
  mime_type is derived from the uploaded file (e.g. application/pdf).
end note

note right of AttendanceStatus
  Used as quick-input shortcut for GradeItems of type ATTENDANCE.
  Default score mapping:
    PRESENT  → 1
    EXCUSED  → 0.5
    ABSENT   → 0
  Mapping values are teacher-adjustable per GradeItem.
end note
@enduml
